--- a/index.html
+++ b/index.html
@@ -7,55 +7,13 @@
     <title>Hovhannes Mirzakhanyan CV</title>
   </head>
   <body>
-    <div class="main">
-      <div class="heading">
-        <div class="info">
-          <h2>Hovhannes Mirzakhanyan</h2>
-          <ul>
-            <li><i class="fas fa-baby"></i> 12.04.1989</li>
-              <li><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/hovhannes-mirzakhanyan-98abb7130/" target="_blank">Linkedin</a> </li>
-            <li><i class="far fa-envelope"></i><a href="mailto:h.r.mirzakhanyan@gmail.com"> h.r.mirzakhanyan@gmail.com</a></li>
-            <li><i class="fas fa-phone-square-alt"></i> (+37495) 901101</li>
-            <li><i class="fas fa-map-marker-alt"></i> Armenia, Armavir, Tairov 5/21</li>
-          </ul>
-
-        </div>
-        <img src="IMG_3867.jpg" alt="my_photo">
+    <div class="container">
+      <div class="section1 div">
+       <img src="IMG_3867.jpg" alt="my photo">
       </div>
-      <div class="about-me">
-        <table>
-          <tr>
-            <th>ՈՒսումնական հաստատության անվանումը</th>
-            <th>Ընդունվելու Տարեթիվ</th>
-            <th>Ավարտելու տարեթիվ</th>
-            <th>Որակավորում</th>
-            <th>Վկայականի անվանումը</th>
-
-          </tr>
-          <tr>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-          </tr>
-        </table>
-      </div>
-      <div class="experience">
-
-      </div>
-      <div class="study">
-
-      </div>
-      <div class="certifications">
-
-      </div>
-      <div class="language">
-
-      </div>
-      <div class="other">
+      <div class="section2 div">
 
       </div>
     </div>
-
   </body>
 </html>
