--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
+     <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Hovhannes Mirzakhanyan CV</title>
