--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-     <meta content="width=device-width; initial-scale=1.0; maximum-scale=1.0;  user-scalable=0;" name="viewport">
+
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/512f8441ba.js"></script>
     <link rel="stylesheet" href="style.css">
     <meta charset="utf-8">
     <title>Hovhannes Mirzakhanyan CV</title>
@@ -11,11 +13,60 @@
     <div class="container">
       <div class="section1 div">
        <img src="IMG_3867.jpg" alt="my photo">
+       <h2>Hovhannes <br>Mirzakhanyan </h2>
+       <ul>
+         <li><i class="fas fa-baby"></i> 12.04.1989</li>
+         <li><i class="fas fa-map-marker-alt"></i> Armenia, Armavir, Tairov 5/21</li>
+         <li><i class="fas fa-phone-square-alt"></i> (+37495) 901101</li>
+         <li><a href="mailto:h.r.mirzakhanyan@gmail.com"><i class="far fa-envelope"></i> h.r.mirzakhanyan@gmail.com</a></li>
+         <li> <a href="https://github.com/SmartCoderJS" target="_blank"><i class="fab fa-github"></i> Github</a></li>
+
+
+           <li> <a href="https://www.linkedin.com/in/hovhannes-mirzakhanyan-98abb7130/" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a> </li>
+         <li><i class="fas fa-exclamation-circle"></i> Served in Army of RA/ 2006-2009</li>
+         <li></li>
+         <li></li>
+         <li></li>
+       </ul>
       </div>
       <div class="section2 div">
-
+        <div class="personal_info">
+          <h3>EMPLOYMENT HISTORY</h3>
+          <div class="heading">
+            <h4>Ameria Bank</h4>
+            <h4>Starting from 26.10.2018- till now</h4>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="heading">
+            <h4>Zvartnots International Airports</h4>
+            <h4>Starting from 01.08.2013-01.07.2018</h4>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="heading">
+            <h4>Finca UCO</h4>
+            <h4>Starting from 01.02.2013-26.05.2013</h4>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="personal_info">
+          <h3>EDUCATION</h3>
+          <div class="heading">
+            <h4>Armenian State University of Econnomics/Masters Degree</h4>
+            <h4> 2014-2016</h4>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="heading">
+            <h4>Armenian State University of Econnomics/Bachelors Degree</h4>
+            <h4>2006-2012</h4>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class="heading">
+            <h4>Finca UCO</h4>
+            <h4>Starting from 01.02.2013-26.05.2013</h4>
+          </div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
       </div>
     </div>
   </body>
 </html>
-
