--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <body>
     <div class="container">
       <div class="section1 div">
-       <img src="IMG_3867.jpg" alt="my photo">
-       <h2>Hovhannes <br>Mirzakhanyan </h2>
+       <img src="IMG_3867.jpg" alt="my photo" class="profile">
+       <h2 class="mons">Hovhannes <br>Mirzakhanyan </h2>
        <ul>
          <li><i class="fas fa-baby"></i> 12.04.1989</li>
          <li><i class="fas fa-map-marker-alt"></i> Armenia, Armavir, Tairov 5/21</li>
@@ -24,32 +24,40 @@
 
            <li> <a href="https://www.linkedin.com/in/hovhannes-mirzakhanyan-98abb7130/" target="_blank"><i class="fab fa-linkedin"></i> Linkedin</a> </li>
          <li><i class="fas fa-exclamation-circle"></i> Served in Army of RA/ 2006-2009</li>
-         <li></li>
+         <li><i class="far fa-address-card"></i> Driving License Given by the Police of RA/ Valid:03.02.15-03.02.25</li>
          <li></li>
          <li></li>
        </ul>
+       <div class="skils">
+<img src="html5.png" alt="">
+<img src="CSS.png" alt="">
+<img src="javascript.png" alt="">
+<img src="Bootstrap.png" alt="">
+<img src="wordpress.png" alt="">
+       </div>
+
       </div>
       <div class="section2 div">
         <div class="personal_info">
-          <h3>EMPLOYMENT HISTORY</h3>
+          <h3 class="mons">EMPLOYMENT HISTORY</h3>
           <div class="heading">
             <h4>Ameria Bank</h4>
-            <h4>Starting from 26.10.2018- till now</h4>
+            <h4>26.10.2018- till now</h4>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <div class="heading">
             <h4>Zvartnots International Airports</h4>
-            <h4>Starting from 01.08.2013-01.07.2018</h4>
+            <h4>01.08.2013-01.07.2018</h4>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <div class="heading">
             <h4>Finca UCO</h4>
-            <h4>Starting from 01.02.2013-26.05.2013</h4>
+            <h4>01.02.2013-26.05.2013</h4>
           </div>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
         <div class="personal_info">
-          <h3>EDUCATION</h3>
+          <h3 class="mons">EDUCATION</h3>
           <div class="heading">
             <h4>Armenian State University of Econnomics/Masters Degree</h4>
             <h4> 2014-2016</h4>
