--- a/index.html
+++ b/index.html
@@ -28,33 +28,59 @@
          <li></li>
          <li></li>
        </ul>
+       <h3 class="mons">Skills</h3>
        <div class="skils">
 <img src="html5.png" alt="">
 <img src="CSS.png" alt="">
 <img src="javascript.png" alt="">
+<img src="jquery.png" alt="">
 <img src="Bootstrap.png" alt="">
 <img src="wordpress.png" alt="">
        </div>
-
+       <h3 class="mons">Learning Resources</h3>
+       
       </div>
       <div class="section2 div">
         <div class="personal_info">
           <h3 class="mons">EMPLOYMENT HISTORY</h3>
           <div class="heading">
-            <h4>Ameria Bank</h4>
+            <h4>AMERIABANK CJSC</h4>
             <h4>26.10.2018- till now</h4>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <ul>
+          <li> <h4>Junior Specialist/Operator</h4>
+            <p>Cards Unit/ Fraud Monitoring Team</p>
+
+           </li>
+          <li><i class="fas fa-map-marker-alt"></i> Head Office: Vazgen Sargsyan 2, 0010, Yerevan, Armenia</li>
+          <li><i class="fas fa-phone-square-alt"></i> (+37410) 561111 </li>
+          <li><a href="mailto:info@ameriabank.am"><i class="far fa-envelope"></i> info@ameriabank.am</a></li>
+          <li> <a href="https://ameriabank.am/" target="_blank"><i class="fas fa-globe-americas"></i> Ameriabank.am</a> </li>
+        </ul> <hr>
           <div class="heading">
-            <h4>Zvartnots International Airports</h4>
+            <h4>ARMENIA INTERNATIONAL AIRPORTS</h4>
             <h4>01.08.2013-01.07.2018</h4>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <ul>
+            <li> <h4>Check-in agent</h4>
+             </li>
+            <li><i class="fas fa-map-marker-alt"></i> 0042, Yerevan, Armenia</li>
+            <li><i class="fas fa-phone-square-alt"></i> (+37410) 493000 </li>
+            <li><a href="mailto:contacts@aia-zvartnots.aero"><i class="far fa-envelope"></i> contacts@aia-zvartnots.aero</a></li>
+            <li> <a href="http://zvartnots.am" target="_blank"><i class="fas fa-globe-americas"></i> Zvartnots.am</a> </li>
+          </ul> <hr>
           <div class="heading">
-            <h4>Finca UCO</h4>
+            <h4>FINCA UCO</h4>
             <h4>01.02.2013-26.05.2013</h4>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <ul>
+            <li> <h4>Loan Officer</h4>
+             </li>
+            <li><i class="fas fa-map-marker-alt"></i> Head Office: Agatangeghos 2a, 0023, Yerevan, Armenia</li>
+            <li><i class="fas fa-phone-square-alt"></i> (+37410) 545331 </li>
+            <li><a href="mailto:inform@finca.am"><i class="far fa-envelope"></i> inform@finca.am</a></li>
+            <li> <a href="https://www.finca.am/" target="_blank"><i class="fas fa-globe-americas"></i> Finca.am</a> </li>
+          </ul> <hr>
         </div>
         <div class="personal_info">
           <h3 class="mons">EDUCATION</h3>
