--- a/index.html
+++ b/index.html
@@ -36,9 +36,30 @@
 <img src="jquery.png" alt="">
 <img src="Bootstrap.png" alt="">
 <img src="wordpress.png" alt="">
+<img src="sass.png" alt="">
+<img src="word.png" alt="">
+<img src="photoshop.png" alt="">
        </div>
        <h3 class="mons">Learning Resources</h3>
-       
+        <ul>
+          <li> <a href="https://www.basic.am/" target="_blank">Basic IT Center</a> </li>
+          <li> <a href="https://www.freecodecamp.org/" target="_blank">freecodecamp.org</a> </li>
+          <li> <a href="https://www.codecademy.com/learn" target="_blank">Codecademy.com</a> </li>
+          <li> <a href="https://www.pluralsight.com/" target="_blank">Pluralsight.com</a> </li>
+          <li> <a href="https://www.edx.org/" target="_blank">edX.org</a> </li>
+
+          <li> <a href="#"></a> </li>
+        </ul>
+         <h3 class="mons">Certifications</h3>
+         <ul>
+             <li> <a href="https://www.freecodecamp.org/certification/smartcoderjs/responsive-web-design" target="_blank"><i class="fab fa-free-code-camp fa-lg" ></i> Responsive Web Design<i class="fas fa-mouse-pointer"></i></a> <p>freeCodeCamp</p> <p>Issued Feb 2019/ No Expiration Date</p> </li>
+         </ul>
+         <h3 class="mons">Languages</h3>
+         <ul>
+           <li>Armeinan/Native speaker</li>
+           <li>Russian/ Advanced</li>
+           <li>English/ Advanced</li>
+         </ul>
       </div>
       <div class="section2 div">
         <div class="personal_info">
@@ -85,20 +106,38 @@
         <div class="personal_info">
           <h3 class="mons">EDUCATION</h3>
           <div class="heading">
-            <h4>Armenian State University of Econnomics/Masters Degree</h4>
+            <h4>Armenian State University of Econnomics</h4>
             <h4> 2014-2016</h4>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <ul>
+            <li> <h4>Masters Degree</h4>
+             </li>
+            <li><i class="fas fa-map-marker-alt"></i> 128 Nalbandyan str., 0025, Yerevan, Armenia</li>
+            <li><i class="fas fa-phone-square-alt"></i> (+37410) 521720 </li>
+            <li><a href="mailto:asue@asue.am"><i class="far fa-envelope"></i> asue@asue.am</a></li>
+            <li> <a href="https://asue.am/" target="_blank"><i class="fas fa-globe-americas"></i> Asue.am</a> </li>
+            <li><i class="fas fa-info-circle"></i> Major subjects: Finance, Accounting in financial institutions, Market of Derivative Stocks, Introduction to Econometric Models.</li>
+          </ul> <hr>
           <div class="heading">
-            <h4>Armenian State University of Econnomics/Bachelors Degree</h4>
+            <h4>Armenian State University of Econnomics</h4>
             <h4>2006-2012</h4>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <ul>
+            <li> <h4>Bachelors Degree</h4>
+             </li>
+            <li><i class="fas fa-map-marker-alt"></i> 128 Nalbandyan str., 0025, Yerevan, Armenia</li>
+            <li><i class="fas fa-phone-square-alt"></i> (+37410) 521720 </li>
+            <li><a href="mailto:asue@asue.am"><i class="far fa-envelope"></i> asue@asue.am</a></li>
+            <li> <a href="https://asue.am/" target="_blank"><i class="fas fa-globe-americas"></i> Asue.am</a> </li>
+            <li><i class="fas fa-info-circle"></i> Major subjects: Finance, Taxes and Tax Policy, Loan Management, Financial tools and infrastructures, etc.</li>
+          </ul> <hr>
           <div class="heading">
-            <h4>Finca UCO</h4>
-            <h4>Starting from 01.02.2013-26.05.2013</h4>
+            <h4> Tairov Basic School</h4>
+            <h4>1996-2006</h4>
           </div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+           <ul>
+             <li><i class="fas fa-map-marker-alt"></i> Tairov, 1129, Armevir, Armenia</li>
+           </ul>
         </div>
       </div>
     </div>
