--- a/index.html
+++ b/index.html
@@ -60,6 +60,10 @@
            <li>Russian/ Advanced</li>
            <li>English/ Advanced</li>
          </ul>
+                 <h3 class="mons">Projects</h3>
+         <ul>
+           <li> <a href="http://hacatun73.am/" target="_blank"><i class="fas fa-globe-americas"></i> Hacatun73.am</a> </li>
+         </ul>
       </div>
       <div class="section2 div">
         <div class="personal_info">
