--- a/index.html
+++ b/index.html
@@ -61,8 +61,9 @@
            <li>English/ Advanced</li>
          </ul>
                  <h3 class="mons">Projects</h3>
-         <ul>
+            <ul>
            <li> <a href="http://hacatun73.am/" target="_blank"><i class="fas fa-globe-americas"></i> Hacatun73.am</a> </li>
+           <li> <a href="./head.html" target="_blank"><i class="fas fa-globe-americas"></i> Door Game</a> </li>
          </ul>
       </div>
       <div class="section2 div">
