--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
             <ul>
            <li> <a href="http://hacatun73.am/" target="_blank"><i class="fas fa-globe-americas"></i> Hacatun73.am</a> </li>
            <li> <a href="./head.html" target="_blank"><i class="fas fa-globe-americas"></i> Door Game</a> </li>
+           <li> <a href="./capstone.html" target="_blank"><i class="fas fa-globe-americas"></i> Example of a simple page</a> </li>
          </ul>
       </div>
       <div class="section2 div">
